# ChangeLog for www-servers/tomcat
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/tomcat/ChangeLog,v 1.272 2011/12/24 18:25:38 fordfrog Exp $

*tomcat-7.0.23-r2 (24 Dec 2011)

  24 Dec 2011; Miroslav Šulc <fordfrog@gentoo.org> -tomcat-7.0.23-r1.ebuild,
  +tomcat-7.0.23-r2.ebuild:
  Fixed installation of documentation (bug #393511, thanks to ron widler
  <ron@einfach.org> for the fix). Also added symlink to docs to catalina base
  webapps which fixes display of documentation from Tomcat default web app.

*tomcat-7.0.23-r1 (15 Dec 2011)

  15 Dec 2011; Miroslav Šulc <fordfrog@gentoo.org> -tomcat-7.0.23.ebuild,
  +tomcat-7.0.23-r1.ebuild:
  Fixed bug with storing SESSIONS.ser in work directory. It cannot be symlink
  because tomcat by default does not allow working with symlink paths.

  14 Dec 2011; Agostino Sarubbo <ago@gentoo.org> tomcat-7.0.22-r1.ebuild:
  Stable for AMD64, wrt bug #392393

*tomcat-7.0.23 (29 Nov 2011)

  29 Nov 2011; Miroslav Šulc <fordfrog@gentoo.org>
  +files/7/7.0.23-build-xml.patch, +tomcat-7.0.23.ebuild:
  Version bump

  13 Nov 2011; Markus Meier <maekke@gentoo.org> tomcat-6.0.33.ebuild:
  x86 stable, bug #388131

  03 Nov 2011; Mike Frysinger <vapier@gentoo.org> tomcat-5.5.27-r4.ebuild,
  tomcat-5.5.27-r5.ebuild:
  Use new egethome helper rather than calling getent directly.

  27 Oct 2011; Tony Vroon <chainsaw@gentoo.org> tomcat-6.0.33.ebuild:
  Marked stable on AMD64 based on arch testing by Ian "idella4" Delaney &
  Agostino "ago" Sarubbo in bug #388131.

  22 Oct 2011; Miroslav Šulc <fordfrog@gentoo.org> -files/6/build-xml.patch,
  -files/6/examples-cal.patch, -files/6/tomcat.init,
  -files/7/7.0.21-build-xml.patch, -tomcat-6.0.26.ebuild,
  -files/7/build-xml.patch, -tomcat-6.0.26-r2.ebuild,
  -files/7/examples-cal.patch, -tomcat-6.0.28-r1.ebuild,
  -tomcat-6.0.29-r1.ebuild, -tomcat-6.0.32-r2.ebuild, -tomcat-7.0.21-r1.ebuild:
  Removed obsolete files
