@@ -10,6 +10,7 @@ AUX 6/catalina.policy 6956 RMD160 957ad3b5dc4aeaa5acd289cdaada0a2e48974d52 SHA1 
 AUX 6/tomcat.conf 2895 RMD160 36ece62ddff5257c04f47d75b9c77bd4dc198652 SHA1 8fef42463b7bf186e2f1d1aeb083bdb370603265 SHA256 b04b085618be755ad9e1796fcbcbb8c2e192eefda3b240f1c06b0d9cc88f2ff0
 AUX 6/tomcat.init.2 4034 RMD160 28a47d7e62ac5437eb2c9164f4595bd67b86f676 SHA1 c55f843f15db90e3e0af6069dfefc91daa4e0015 SHA256 55abf160871648ebeca531865b5918846cf298dadc9cdc5cc7ee060a8db487ad
 AUX 6/tomcat.init.3 4050 RMD160 d7fe0c83c7e5aeb30f2946c259c9f2bb3fe98aa8 SHA1 1519b957d5c467d604e5422f7876a08d79874ca5 SHA256 726fbfd0961df4a6fb70df17f72144a3f19c1080bd6f1f6abdadd849d5dd343c
+AUX 6/tomcat.init.4 4052 RMD160 cc78f9de540487a3fa456e1f88f4e3d016856b68 SHA1 cfba63b9d42e3e039e899e00b58a9c04460ae9b2 SHA256 f7e9b18f0381ae5ba6c0c28cf03a40a7f8b6256f61d630a4f7a941be01cc599d
 AUX 7/7.0.22-build-xml.patch 4744 RMD160 3d89056a8325ac7bf40f4b49822aff552e570d64 SHA1 87b6d986778e8c085500896feac1d7d0b56e3a9c SHA256 8764f2b11ca68712a8122b3c5995d85a4a3c56b855855ced1dce4ffd7b7bb1c1
 AUX 7/7.0.23-build-xml.patch 4897 RMD160 3b3b5755bd40e759985643f95f26e88069780f3c SHA1 8948dc0f168384670d6e69947de42069c30d78fd SHA256 e6f171cbdfa1af457dfe72be86a316e07a9bb9c22d3c98c094a0972ee4c38011
 AUX 7/tomcat.conf 2895 RMD160 e0f3b7f72b925a5d681780e1dcdde46143daef48 SHA1 1b94de2c71c046045b5622756d976378678200a3 SHA256 834b38c1e17294ee73c6571a45fb35bc398f15da4ed189e4d359b8b39121bb8e
@@ -17,13 +18,15 @@ AUX 7/tomcat.init 3505 RMD160 6fd99e04c94ca5cccd61d4dce4f35fa9f058488f SHA1 1e55
 DIST apache-tomcat-5.5.27-src.tar.gz 7382057 RMD160 8114fa3be19fd28a5d2d0d7e7087f6d82e0f111f SHA1 c6217d78d2e64fa839a30372bd2724ba75030c14 SHA256 90bc8abcddda604e855c37035653b1e24b31c2f09b7a29235e92d65025f7a334
 DIST apache-tomcat-6.0.32-src.tar.gz 3394648 RMD160 e6203645e6570564b25154018436d908c5b1a71a SHA1 ec94c511e54da2b02dd2ba45b9fd1703d5771a45 SHA256 aa2b72343f2d7f5090e8aabdbf6e0c4f65cd504a719ebb2e18268207ff2c426c
 DIST apache-tomcat-6.0.33-src.tar.gz 3389376 RMD160 24bd6c0e1bee7daa4cb59ec56552599330f0bb4c SHA1 437db0ba55c6e398fe3af73c4fa5eed3c4666842 SHA256 6dbd5d6eedcf3acd8bf7b6e32544a6e94ec595f7c921baa92f08adb5a5d91b64
+DIST apache-tomcat-6.0.35-src.tar.gz 3403286 RMD160 d292b210fe62aafec4a074e3a626766585367a3e SHA1 1a47ad41d52a27757cfeddf7fa1627688ed4027a SHA256 6e5205834bd595250c8e0b640e2345ef643f23364ae0e099334b5132103be764
 DIST apache-tomcat-7.0.22-src.tar.gz 4044650 RMD160 e49636d4555f92a4f56a46aee7fcdec3ede5b1f1 SHA1 588512b2149850b3e6de1ac20c79b54aea074eff SHA256 e907cc65ec38cf9e01995432cc7925c18d03cdbc0dd6baa8f82df2bae83c8486
 DIST apache-tomcat-7.0.23-src.tar.gz 4103854 RMD160 ebe500ffcc7903c6f4d301533a2a16cb878d11ef SHA1 fe56adb0939825c4f7c0f69e57858b1fb93ae958 SHA256 b86523095b06d58b9553683f480250dec7216ce1914c92ea8ecca0799e6ad3b0
 EBUILD tomcat-5.5.27-r4.ebuild 10028 RMD160 39b0fde8bce7ca92a11d69992f1f8ba70404d70d SHA1 31953fe9665686f43d333608dfb73eff87717bae SHA256 bb074efd50f5164c4b07b97de1de0d77cc05c8548112de7f873fb1afe2b04b19
 EBUILD tomcat-5.5.27-r5.ebuild 10087 RMD160 f9f32edcf802c72499de5519e332aaf7b4b7efbf SHA1 7d494c9bd1ea4b6da8bf4913c8f28e7180d57535 SHA256 93e335594ff10e4bd9d9d2537f0ba5d701c909e181d0fe25d841b771743ec8fb
 EBUILD tomcat-6.0.32-r1.ebuild 6964 RMD160 a38e0536f45b4fbf5d4cbffb903a11c83948bdb4 SHA1 3196907adc07db41a62c43078c1c078a11e4d249 SHA256 00f8ecbc1676db5902971dd76d354e8b5bfe8938f285e9d5578e64160dcc087b
 EBUILD tomcat-6.0.33.ebuild 6961 RMD160 17c4cc0cd1bf9b681f612bf131f34440e1a67bae SHA1 1dbe88bf2615d57add8e0deab2074d653a7423f0 SHA256 ae706bb3f875113fa03dc4e9770cd43b033db449f75bb3c76e7bd9b1405c2036
+EBUILD tomcat-6.0.35.ebuild 6991 RMD160 c5bf0072768c23112e98f8d0f05d852446ce48f1 SHA1 079bc1830ee5dff2c8d37d24846e478f3a94c4ef SHA256 4292e84c08ba397bf26cbe3ae1df1c77058b52871b5e3578da5441d14161db1a
 EBUILD tomcat-7.0.22-r1.ebuild 7055 RMD160 73f24c33a3ddbedd60ddae890a2bf0db684b1d61 SHA1 cfeea5c3f16128b6344873ecea2683407c0c012c SHA256 8d540db3b047725613c34b886d18d42799abe82fa82daa4373a2dff20b6d670a
 EBUILD tomcat-7.0.23-r2.ebuild 7736 RMD160 4704b73b3960ed1754ed1089c867c83e9572710c SHA1 43824e3257002ec116354ffb7321d3e1fdf1703e SHA256 f8be1a48c434d084d6500c5cf1c2d6282d6f03681802d12cf26aa26f70d00cc7
-MISC ChangeLog 67830 RMD160 760d0457a59ae1e282af77e2cc6fc50fa9e70884 SHA1 fdff8be08700db8a06f907e9a81061307a6cf74d SHA256 1f0f47114ef167286f1f56fe2b1cfbd01188de690b780eff1085cbbc6eaffdc0
+MISC ChangeLog 68169 RMD160 10be71c098117c5b565724a86c0dc6a2f7312064 SHA1 b1c832c2158d22ba12a8b6f08c15061dfbab2673 SHA256 255d071231be5ef6a0e27ef12053a0ba37d202f662fbdc340ef313908bc3fd7a
 MISC metadata.xml 521 RMD160 72b6ce433f5c9a65deaa0c1830c070c3adbcf33a SHA1 2c4f4fd887a5df9e955c711d0fcd21a5cab90a2d SHA256 dbab559e58c59eddd5df1c3bb39d17b26fadb587ad5dab51fc6fa7af5e601e22
